--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,3 +13,14 @@
 //@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
 //@import url('https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css');
 
+
+#preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #preview img {
+    max-width: 100%;
+    max-height: 500px;
+  }
