--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,3 +24,5 @@
     max-width: 100%;
     max-height: 500px;
   }
+
+  #GIS label { font-weight: bold; color: black; display: block; clear: both;}
