Assessment Create, Update w Validation

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10929,3 +10929,11 @@ textarea.form-control-lg {
   display: block;
   clear: both;
 }
+
+#GIS ul li {
+  list-style: none;
+}
+
+#GIS ul {
+  padding: 0px;
+}
