--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,3 +26,5 @@
   }
 
   #GIS label { font-weight: bold; color: black; display: block; clear: both;}
+  #GIS ul li { list-style: none;}
+  #GIS ul  { padding:  0px;}
