--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10925,9 +10925,11 @@ textarea.form-control-lg {
 
 #GIS label {
   font-weight: bold;
-  color: black;
+  color: #196491;
   display: block;
   clear: both;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
 }
 
 #GIS ul li {
