--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,6 +25,6 @@
     max-height: 500px;
   }
 
-  #GIS label { font-weight: bold; color: black; display: block; clear: both;}
+  #GIS label { font-weight: bold; color: #196491; display: block; clear: both; font-family: Arial, Helvetica, sans-serif; font-size: 10pt;}
   #GIS ul li { list-style: none;}
   #GIS ul  { padding:  0px;}
